chrome-extension/src/styles.less
.notelix-popup-base-style {
  line-height: 1;
  padding: 4px;
  background: rgba(240, 240, 240, 0.8);
  border-radius: 6px;
  box-shadow: 0 0 0px rgba(200, 200, 200, 1);
  z-index: 100000;
  opacity: 0.9;
  transform: translateX(-50%) translateY(-20px);
  transition: all 0.05s ease-out;

  &:hover {
    box-shadow: 0 0 4px rgba(200, 200, 200, 1);
    background: rgba(255, 255, 255, 1);
    opacity: 1;
  }

  &.dark-reader-enabled {
    svg {
      fill: white;
    }
  }
}

#notelix-annotate-popover {
  .notelix-popup-base-style();
  display: none;
  position: absolute;
  font-size: 0;
  padding: 3px 2px;

  .color {
    width: 14px;
    height: 14px;
    border-radius: 50%;
    display: inline-block;
    margin: 0 4px;
    cursor: pointer;
    box-shadow: 0 0 1px #888;
    transform: scale(1.0);
    transform-origin: center center;

    &:hover {
      filter: brightness(1.05);
      transform: scale(1.1);
    }
  }
}

#notelix-edit-annotation-popover {
  display: none;
  position: absolute;
  margin-top: -10px;
}

.notelix-button {
  .notelix-popup-base-style();
  z-index: 1000000;
  font-size: 0;

  span {
    display: inline-block;
    position: relative;
    cursor: pointer;
    width: 28px;
    height: 20px;

    &:hover {
      background: rgba(255, 255, 255, 0.8);
    }

    svg {
      width: 16px;
      padding: 0 2px;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%) scale(1.0);
      transform-origin: center center;
      transition: 0.1s all;

      &:hover {
        transform: translate(-50%, -50%) scale(1.1);
      }
    }
  }

  &.dark-reader-enabled {
    span:hover * {
      background-color: initial !important;
    }

    span:hover {
      background: rgba(255, 255, 255, 0.2) !important;
    }
  }
}

.notelix-notes-inline {
  display: inline-block;
  position: relative;
  vertical-align: bottom;
  width: 0;
  margin-bottom: calc(2em + 20px);
  cursor: pointer;
  filter: brightness(1);
  transition: all 0.15s ease-in-out;

  .text {
    text-decoration: none;
    font-style: normal;
    font-weight: normal;
    white-space: nowrap;
    display: inline;
    padding: 4px 8px;
    position: absolute;
    z-index: 1;
    bottom: calc(-1em - 16px);
    border-radius: 2px;
    font-size: 11px;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .caret {
    display: inline-block;
    width: 10px;
    height: 10px;
    transform: rotate(45deg);
    position: absolute;
    bottom: calc(-1em - 16px);

    z-index: 0;
    left: 6px;
  }

  &:hover {
    filter: brightness(1.05);
    z-index: 100;
  }
}

.notelix-expanded-notes {
  position: fixed;
  left: 0;
  width: 100%;
  padding: 20px;
  box-sizing: border-box;
  text-align: center;
  z-index: 1000;

  & > div {
    padding: 20px;
    backdrop-filter: blur(5px);
    background: #FFFFFFBB;
    box-shadow: 0 0 4px #00000055;
    border-radius: 4px;
    font-size: 16px;
  }
}

